[project]
name = "fyn-runner"
version = "0.1.0"
dependencies = [
    "appdirs",
    "nvidia-ml-py",
    "psutil",
    "py-cpuinfo",
    "pydantic",
    "pyyaml",
    "requests",
    "websocket-client",
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "flake8",
    "pylint",
    "pylint-pydantic",
    "pre-commit",
]

production = [
    "fyn_api_client"
]

[tool.autopep8]
max_line_length = 100
aggressive = 2

[tool.flake8]
max-line-length = 100

[tool.pylint.main]
load-plugins = [
    "pylint_pydantic",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "broad-exception-caught",
    "logging-fstring-interpolation",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-positional-arguments",
    "too-many-public-methods",    
]

[tool.pylint.typecheck]
extension-pkg-whitelist = [
    "fyn_api_client",
]
