[project]
name = "fyn-runner"
version = "0.1.0"
dependencies = [
    "appdirs",
    "nvidia-ml-py",
    "psutil",
    "py-cpuinfo",
    "pydantic>=2.0",
    "pyyaml",
    "requests",
    "websocket-client",
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "flake8",
    "pylint",
    "pylint-pydantic",
    "pre-commit",
]

production = [
    "fyn_api_client"
]

[tool.autopep8]
max_line_length = 100
aggressive = 2

[tool.flake8]
max-line-length = 100

[tool.pylint.main]
load-plugins = [
    "pylint_pydantic",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "broad-exception-caught",
    "logging-fstring-interpolation",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "superfluous-parens"
]

[tool.pylint.typecheck]
extension-pkg-whitelist = [
    "fyn_api_client",
]

ignored-modules = [
    "fyn_api_client",
    "fyn_api_client.models",
    "fyn_api_client.models.status_enum",
    "fyn_api_client.models.resource_type_enum",
    "fyn_api_client.models.job_info_runner",
    "fyn_api_client.models.app",
    "fyn_api_client.models.type_enum",
    "fyn_api_client.models.patched_job_info_runner_request",
]
